states with exactly 7 locations (counties)

--- a/p8105_hw3_amv2187.md
+++ b/p8105_hw3_amv2187.md
@@ -11,7 +11,8 @@ data("brfss_smart2010")
 
 brfss_cleaned = brfss_smart2010 %>%
   janitor::clean_names() %>%
-  filter(topic == 'Overall Health') 
+  filter(topic == 'Overall Health' & response %in% c('Excellent', 'Very good', 'Good', 'Fair', 'Poor')) %>%
+  mutate(response = factor(response, ordered = TRUE, levels = c('Excellent', 'Very good', 'Good', 'Fair', 'Poor')))
 
 str(brfss_cleaned)
 ```
@@ -23,7 +24,7 @@ str(brfss_cleaned)
     ##  $ class                     : chr  "Health Status" "Health Status" "Health Status" "Health Status" ...
     ##  $ topic                     : chr  "Overall Health" "Overall Health" "Overall Health" "Overall Health" ...
     ##  $ question                  : chr  "How is your general health?" "How is your general health?" "How is your general health?" "How is your general health?" ...
-    ##  $ response                  : chr  "Excellent" "Very good" "Good" "Fair" ...
+    ##  $ response                  : Ord.factor w/ 5 levels "Excellent"<"Very good"<..: 1 2 3 4 5 1 2 3 4 5 ...
     ##  $ sample_size               : int  94 148 208 107 45 91 177 224 120 66 ...
     ##  $ data_value                : num  18.9 30 33.1 12.5 5.5 15.6 31.3 31.2 15.5 6.4 ...
     ##  $ confidence_limit_low      : num  14.1 24.9 28.2 9.5 3.5 11 26 26.1 11.7 4.4 ...
@@ -40,57 +41,25 @@ str(brfss_cleaned)
     ##  $ question_id               : chr  "GENHLTH" "GENHLTH" "GENHLTH" "GENHLTH" ...
     ##  $ respid                    : chr  "RESP056" "RESP057" "RESP058" "RESP059" ...
     ##  $ geo_location              : chr  "(33.518601, -86.814688)" "(33.518601, -86.814688)" "(33.518601, -86.814688)" "(33.518601, -86.814688)" ...
-    ##  - attr(*, "spec")=List of 2
-    ##   ..$ cols   :List of 23
-    ##   .. ..$ Year                      : list()
-    ##   .. .. ..- attr(*, "class")= chr  "collector_integer" "collector"
-    ##   .. ..$ Locationabbr              : list()
-    ##   .. .. ..- attr(*, "class")= chr  "collector_character" "collector"
-    ##   .. ..$ Locationdesc              : list()
-    ##   .. .. ..- attr(*, "class")= chr  "collector_character" "collector"
-    ##   .. ..$ Class                     : list()
-    ##   .. .. ..- attr(*, "class")= chr  "collector_character" "collector"
-    ##   .. ..$ Topic                     : list()
-    ##   .. .. ..- attr(*, "class")= chr  "collector_character" "collector"
-    ##   .. ..$ Question                  : list()
-    ##   .. .. ..- attr(*, "class")= chr  "collector_character" "collector"
-    ##   .. ..$ Response                  : list()
-    ##   .. .. ..- attr(*, "class")= chr  "collector_character" "collector"
-    ##   .. ..$ Sample_Size               : list()
-    ##   .. .. ..- attr(*, "class")= chr  "collector_integer" "collector"
-    ##   .. ..$ Data_value                : list()
-    ##   .. .. ..- attr(*, "class")= chr  "collector_double" "collector"
-    ##   .. ..$ Confidence_limit_Low      : list()
-    ##   .. .. ..- attr(*, "class")= chr  "collector_double" "collector"
-    ##   .. ..$ Confidence_limit_High     : list()
-    ##   .. .. ..- attr(*, "class")= chr  "collector_double" "collector"
-    ##   .. ..$ Display_order             : list()
-    ##   .. .. ..- attr(*, "class")= chr  "collector_integer" "collector"
-    ##   .. ..$ Data_value_unit           : list()
-    ##   .. .. ..- attr(*, "class")= chr  "collector_character" "collector"
-    ##   .. ..$ Data_value_type           : list()
-    ##   .. .. ..- attr(*, "class")= chr  "collector_character" "collector"
-    ##   .. ..$ Data_Value_Footnote_Symbol: list()
-    ##   .. .. ..- attr(*, "class")= chr  "collector_character" "collector"
-    ##   .. ..$ Data_Value_Footnote       : list()
-    ##   .. .. ..- attr(*, "class")= chr  "collector_character" "collector"
-    ##   .. ..$ DataSource                : list()
-    ##   .. .. ..- attr(*, "class")= chr  "collector_character" "collector"
-    ##   .. ..$ ClassId                   : list()
-    ##   .. .. ..- attr(*, "class")= chr  "collector_character" "collector"
-    ##   .. ..$ TopicId                   : list()
-    ##   .. .. ..- attr(*, "class")= chr  "collector_character" "collector"
-    ##   .. ..$ LocationID                : list()
-    ##   .. .. ..- attr(*, "class")= chr  "collector_character" "collector"
-    ##   .. ..$ QuestionID                : list()
-    ##   .. .. ..- attr(*, "class")= chr  "collector_character" "collector"
-    ##   .. ..$ RESPID                    : list()
-    ##   .. .. ..- attr(*, "class")= chr  "collector_character" "collector"
-    ##   .. ..$ GeoLocation               : list()
-    ##   .. .. ..- attr(*, "class")= chr  "collector_character" "collector"
-    ##   ..$ default: list()
-    ##   .. ..- attr(*, "class")= chr  "collector_guess" "collector"
-    ##   ..- attr(*, "class")= chr "col_spec"
+
+``` r
+# Which states were observed at 7 locations in 2002?
+brfss_cleaned %>%
+  filter(year == 2002) %>%  # filter to only listings in 2002
+  select(locationabbr, locationdesc) %>%  # select only state and county variables
+  distinct() %>% # get distinct counties
+  group_by(locationabbr) %>% # get distinct locations
+  filter(n() == 7) %>%  # state listings that have exactly 7 counties listed
+  distinct(locationabbr) # get states
+```
+
+    ## # A tibble: 3 x 1
+    ## # Groups:   locationabbr [3]
+    ##   locationabbr
+    ##   <chr>       
+    ## 1 CT          
+    ## 2 FL          
+    ## 3 NC
 
 Problem 2
 ---------
