--- a/p8105_hw3_amv2187.Rmd
+++ b/p8105_hw3_amv2187.Rmd
@@ -22,9 +22,21 @@ data("brfss_smart2010")
 
 brfss_cleaned = brfss_smart2010 %>%
   janitor::clean_names() %>%
-  filter(topic == 'Overall Health') 
+  filter(topic == 'Overall Health' & response %in% c('Excellent', 'Very good', 'Good', 'Fair', 'Poor')) %>%
+  mutate(response = factor(response, ordered = TRUE, levels = c('Excellent', 'Very good', 'Good', 'Fair', 'Poor')))
 
 str(brfss_cleaned)
+```
+
+```{r}
+# Which states were observed at 7 locations in 2002?
+brfss_cleaned %>%
+  filter(year == 2002) %>%  # filter to only listings in 2002
+  select(locationabbr, locationdesc) %>%  # select only state and county variables
+  distinct() %>% # get distinct counties
+  group_by(locationabbr) %>% # get distinct locations
+  filter(n() == 7) %>%  # state listings that have exactly 7 counties listed
+  distinct(locationabbr) # get states
 ```
 
 
