--- a/p8105_hw3_amv2187.md
+++ b/p8105_hw3_amv2187.md
@@ -12,15 +12,17 @@ data("brfss_smart2010")
 brfss_cleaned = brfss_smart2010 %>%
   janitor::clean_names() %>%
   filter(topic == 'Overall Health' & response %in% c('Excellent', 'Very good', 'Good', 'Fair', 'Poor')) %>%
-  mutate(response = factor(response, ordered = TRUE, levels = c('Excellent', 'Very good', 'Good', 'Fair', 'Poor')))
+  mutate(response = factor(response, ordered = TRUE, levels = c('Excellent', 'Very good', 'Good', 'Fair', 'Poor'))) %>%
+  rename(state = locationabbr,
+         county = locationdesc)
 
 str(brfss_cleaned)
 ```
 
     ## Classes 'tbl_df', 'tbl' and 'data.frame':    10625 obs. of  23 variables:
     ##  $ year                      : int  2010 2010 2010 2010 2010 2010 2010 2010 2010 2010 ...
-    ##  $ locationabbr              : chr  "AL" "AL" "AL" "AL" ...
-    ##  $ locationdesc              : chr  "AL - Jefferson County" "AL - Jefferson County" "AL - Jefferson County" "AL - Jefferson County" ...
+    ##  $ state                     : chr  "AL" "AL" "AL" "AL" ...
+    ##  $ county                    : chr  "AL - Jefferson County" "AL - Jefferson County" "AL - Jefferson County" "AL - Jefferson County" ...
     ##  $ class                     : chr  "Health Status" "Health Status" "Health Status" "Health Status" ...
     ##  $ topic                     : chr  "Overall Health" "Overall Health" "Overall Health" "Overall Health" ...
     ##  $ question                  : chr  "How is your general health?" "How is your general health?" "How is your general health?" "How is your general health?" ...
@@ -46,20 +48,42 @@ str(brfss_cleaned)
 # Which states were observed at 7 locations in 2002?
 brfss_cleaned %>%
   filter(year == 2002) %>%  # filter to only listings in 2002
-  select(locationabbr, locationdesc) %>%  # select only state and county variables
+  select(state, county) %>%  # select only state and county variables
   distinct() %>% # get distinct counties
-  group_by(locationabbr) %>% # get distinct locations
+  group_by(state) %>% # get distinct locations
   filter(n() == 7) %>%  # state listings that have exactly 7 counties listed
-  distinct(locationabbr) # get states
+  distinct(state) # get states
 ```
 
     ## # A tibble: 3 x 1
-    ## # Groups:   locationabbr [3]
-    ##   locationabbr
-    ##   <chr>       
-    ## 1 CT          
-    ## 2 FL          
+    ## # Groups:   state [3]
+    ##   state
+    ##   <chr>
+    ## 1 CT   
+    ## 2 FL   
     ## 3 NC
+
+``` r
+brfss_cleaned %>%
+  select(state, county, year) %>%
+  distinct() %>%
+  count(state, year) %>%
+  ggplot(aes(x = year, y = n, color = state)) +
+  geom_line(alpha = 0.6) + 
+  labs(
+    title = 'Number of counties that responded 2002-2010',
+    y = 'Number of counties',
+    x = 'Year', 
+    fill = 'x'
+  ) +
+  theme(legend.position = 'right')
+```
+
+![](p8105_hw3_amv2187_files/figure-markdown_github/unnamed-chunk-2-1.png)
+
+``` r
+  # geom_smooth(method = 'loess', se = F, alpha = 0.5)
+```
 
 Problem 2
 ---------
