--- a/p8105_hw3_amv2187.Rmd
+++ b/p8105_hw3_amv2187.Rmd
@@ -12,6 +12,9 @@ library(p8105.datasets)
 library(tidyverse)
 
 getwd()
+
+theme_set(theme_bw() + 
+            theme(legend.position = "bottom"))
 ```
 
 
@@ -23,7 +26,9 @@ data("brfss_smart2010")
 brfss_cleaned = brfss_smart2010 %>%
   janitor::clean_names() %>%
   filter(topic == 'Overall Health' & response %in% c('Excellent', 'Very good', 'Good', 'Fair', 'Poor')) %>%
-  mutate(response = factor(response, ordered = TRUE, levels = c('Excellent', 'Very good', 'Good', 'Fair', 'Poor')))
+  mutate(response = factor(response, ordered = TRUE, levels = c('Excellent', 'Very good', 'Good', 'Fair', 'Poor'))) %>%
+  rename(state = locationabbr,
+         county = locationdesc)
 
 str(brfss_cleaned)
 ```
@@ -32,11 +37,26 @@ str(brfss_cleaned)
 # Which states were observed at 7 locations in 2002?
 brfss_cleaned %>%
   filter(year == 2002) %>%  # filter to only listings in 2002
-  select(locationabbr, locationdesc) %>%  # select only state and county variables
+  select(state, county) %>%  # select only state and county variables
   distinct() %>% # get distinct counties
-  group_by(locationabbr) %>% # get distinct locations
+  group_by(state) %>% # get distinct locations
   filter(n() == 7) %>%  # state listings that have exactly 7 counties listed
-  distinct(locationabbr) # get states
+  distinct(state) # get states
+
+brfss_cleaned %>%
+  select(state, county, year) %>%
+  distinct() %>%
+  count(state, year) %>%
+  ggplot(aes(x = year, y = n, color = state)) +
+  geom_line(alpha = 0.6) + 
+  labs(
+    title = 'Number of counties that responded 2002-2010',
+    y = 'Number of counties',
+    x = 'Year', 
+    fill = 'x'
+  ) +
+  theme(legend.position = 'right')
+  # geom_smooth(method = 'loess', se = F, alpha = 0.5)
 ```
 
 
