--- a/p8105_hw3_amv2187.md
+++ b/p8105_hw3_amv2187.md
@@ -103,7 +103,21 @@ brfss_cleaned %>%
 
 ``` r
 # For each year and state, compute the average proportion in each response category (taking the average across locations in a state). Make a five-panel plot that shows, for each response category separately, the distribution of these state-level averages over time.
+brfss_cleaned %>% 
+  group_by(year, state, response) %>%
+  summarise(avg = mean(data_value, na.rm = T)) %>% 
+  ggplot(aes(x = year, y = avg, color = state)) +
+  geom_line(alpha = 0.5) +
+  facet_grid(~response) + 
+  labs(
+    title = 'Average proportion of responses',
+    y = 'Average proportion of responses',
+    x = 'Year'
+  ) + 
+  theme(axis.text.x = element_text(angle = 60, hjust = 1)) # spread out legend??
 ```
+
+![](p8105_hw3_amv2187_files/figure-markdown_github/unnamed-chunk-2-2.png)
 
 Problem 2
 ---------
