--- a/p8105_hw3_amv2187.md
+++ b/p8105_hw3_amv2187.md
@@ -136,6 +136,7 @@ aisles = instacart %>%
   count %>%
   arrange(department, n)
   
+  
 nrow(aisles)
 ```
 
@@ -175,20 +176,26 @@ instacart %>%
     ## # ... with 124 more rows
 
 ``` r
-ggplot(aisles, aes(x = aisle, y = n, color = department)) +
+aisles %>%
+  ungroup %>%
+  filter(!(aisle %in% c('missing', 'other'))) %>%
+  mutate(aisle_id = as.character(aisle_id)) %>%
+  ggplot(aes(y = aisle, x = log(n), color = department)) +
   geom_point(stat = 'identity') +
-  facet_wrap(.~department, scales = 'free') +
+  facet_grid(department ~ ., scales = 'free', space = 'free') +
   labs(
     title = 'Number of items purchased across aisles',
-    x = 'Aisle'
+    x = 'Number of items (logarithmic scale)',
+    y = 'Aisle'
   ) +
   #scale_y_continuous(limits = c(0, 50000)) +
-  #scale_x_discrete(limits = aisles$aisle) +
-  theme(axis.text.x = element_text(angle = 90, hjust = 1),
+  #scale_y_discrete(limits = rev(aisles$aisle)) +
+  theme(axis.text.x = element_text(angle = 90, hjust = 1, vjust = 0.5),
+        text = element_text(size = 8),
         legend.position = 'none')
 ```
 
-![](p8105_hw3_amv2187_files/figure-markdown_github/unnamed-chunk-4-1.png)
+![](p8105_hw3_amv2187_files/figure-markdown_github/unnamed-chunk-5-1.png)
 
 ``` r
 items = instacart %>%
