--- a/p8105_hw3_amv2187.md
+++ b/p8105_hw3_amv2187.md
@@ -114,7 +114,8 @@ brfss_cleaned %>%
     y = 'Average proportion of responses',
     x = 'Year'
   ) + 
-  theme(axis.text.x = element_text(angle = 60, hjust = 1)) +
+  theme(axis.text.x = element_text(angle = 60, hjust = 1),
+        legend.position = "bottom") +
   guides(colour = guide_legend(nrow = 4, byrow = T)) 
 ```
 
@@ -125,7 +126,6 @@ Problem 2
 
 ``` r
 data("instacart")
-#View(instacart[1:100,])
 ```
 
 What are the average/median/maximum number of items purchased by people? On what day(s) of the week are the most items purchased? The least? What types of food are purchased most often? Is there an association between the number of items a person purchased and the number of prior visits they've made? Is there a pattern that is commonly followed in the store? (i.e. an association between a product's aisle and order of addition to cart) At what time of day do most orders take place?
@@ -135,16 +135,8 @@ aisles = instacart %>%
   group_by(aisle, aisle_id, department, department_id) %>%
   count %>%
   arrange(department, n)
-  
-  
-nrow(aisles)
-```
 
-    ## [1] 134
-
-``` r
-aisles %>%
-  filter(n == max(.$n))
+aisles %>% filter(n == max(.$n))
 ```
 
     ## # A tibble: 1 x 5
@@ -152,28 +144,6 @@ aisles %>%
     ##   aisle            aisle_id department department_id      n
     ##   <chr>               <int> <chr>              <int>  <int>
     ## 1 fresh vegetables       83 produce                4 150609
-
-``` r
-instacart %>%
-  group_by(aisle) %>%
-  count
-```
-
-    ## # A tibble: 134 x 2
-    ## # Groups:   aisle [134]
-    ##    aisle                      n
-    ##    <chr>                  <int>
-    ##  1 air fresheners candles  1067
-    ##  2 asian foods             7007
-    ##  3 baby accessories         306
-    ##  4 baby bath body care      328
-    ##  5 baby food formula      13198
-    ##  6 bakery desserts         1501
-    ##  7 baking ingredients     13088
-    ##  8 baking supplies decor   1094
-    ##  9 beauty                   287
-    ## 10 beers coolers           1839
-    ## # ... with 124 more rows
 
 ``` r
 aisles %>%
@@ -188,8 +158,6 @@ aisles %>%
     x = 'Number of items (logarithmic scale)',
     y = 'Aisle'
   ) +
-  #scale_y_continuous(limits = c(0, 50000)) +
-  #scale_y_discrete(limits = rev(aisles$aisle)) +
   theme(axis.text.x = element_text(angle = 90, hjust = 1, vjust = 0.5),
         text = element_text(size = 8),
         legend.position = 'none')
@@ -198,11 +166,21 @@ aisles %>%
 ![](p8105_hw3_amv2187_files/figure-markdown_github/unnamed-chunk-5-1.png)
 
 ``` r
-items = instacart %>%
-  group_by(product_name, aisle) %>%
+instacart %>%
+  filter(aisle %in% c('baking ingredients', 'dog food care', 'packaged vegetables fruits')) %>%
+  group_by(aisle, product_name) %>%
   count %>%
-  arrange(aisle)
+  arrange(aisle, n) %>%
+  group_by(aisle) %>%
+  slice(n()) %>%
+  knitr::kable()
 ```
+
+| aisle                      | product\_name                                 |     n|
+|:---------------------------|:----------------------------------------------|-----:|
+| baking ingredients         | Light Brown Sugar                             |   499|
+| dog food care              | Snack Sticks Chicken & Rice Recipe Dog Treats |    30|
+| packaged vegetables fruits | Organic Baby Spinach                          |  9784|
 
 Problem 3
 ---------
