--- a/p8105_hw3_amv2187.md
+++ b/p8105_hw3_amv2187.md
@@ -182,6 +182,25 @@ instacart %>%
 | dog food care              | Snack Sticks Chicken & Rice Recipe Dog Treats |    30|
 | packaged vegetables fruits | Organic Baby Spinach                          |  9784|
 
+``` r
+instacart %>%
+  filter(product_name %in% c('Pink Lady Apples', 'Coffee Ice Cream')) %>%
+  group_by(order_dow) %>%
+  rename('Day of the week' = order_dow) %>%
+  summarise('Average hour of purchase' = round(mean(order_hour_of_day))) %>%
+  knitr::kable(caption = 'Average time of purchase of Pink Lady apples and coffee ice cream')
+```
+
+|  Day of the week|  Average hour of purchase|
+|----------------:|-------------------------:|
+|                0|                        14|
+|                1|                        12|
+|                2|                        13|
+|                3|                        15|
+|                4|                        13|
+|                5|                        13|
+|                6|                        13|
+
 Problem 3
 ---------
 
