--- a/p8105_hw3_amv2187.md
+++ b/p8105_hw3_amv2187.md
@@ -132,35 +132,33 @@ What are the average/median/maximum number of items purchased by people? On what
 
 ``` r
 aisles = instacart %>%
-  group_by(aisle, aisle_id, department, department_id) %>%
+  group_by(aisle, department) %>%
   count %>%
   arrange(department, n)
 
 aisles %>% filter(n == max(.$n))
 ```
 
-    ## # A tibble: 1 x 5
-    ## # Groups:   aisle, aisle_id, department, department_id [1]
-    ##   aisle            aisle_id department department_id      n
-    ##   <chr>               <int> <chr>              <int>  <int>
-    ## 1 fresh vegetables       83 produce                4 150609
+    ## # A tibble: 1 x 3
+    ## # Groups:   aisle, department [1]
+    ##   aisle            department      n
+    ##   <chr>            <chr>       <int>
+    ## 1 fresh vegetables produce    150609
 
 ``` r
 aisles %>%
-  ungroup %>%
   filter(!(aisle %in% c('missing', 'other'))) %>%
-  mutate(aisle_id = as.character(aisle_id)) %>%
   ggplot(aes(y = aisle, x = log(n), color = department)) +
-  geom_point(stat = 'identity') +
-  facet_grid(department ~ ., scales = 'free', space = 'free') +
-  labs(
-    title = 'Number of items purchased across aisles',
+  geom_point() +
+  facet_grid(department ~ ., scales = 'free', space = 'free') + # facet by department
+  labs( # set labels
+    title = 'Number of items purchased across aisles, by department',
     x = 'Number of items (logarithmic scale)',
     y = 'Aisle'
   ) +
-  theme(axis.text.x = element_text(angle = 90, hjust = 1, vjust = 0.5),
-        text = element_text(size = 8),
-        legend.position = 'none')
+  theme(text = element_text(size = 8), # make text small enough to be non-overlapping
+        legend.position = 'none', # no legend (not necessary with facet_grid)
+        strip.text.y = element_text(size = 8, angle = 0)) # make face_grid titles horizontal so they are legible
 ```
 
 ![](p8105_hw3_amv2187_files/figure-markdown_github/unnamed-chunk-5-1.png)
