--- a/p8105_hw3_amv2187.Rmd
+++ b/p8105_hw3_amv2187.Rmd
@@ -6,7 +6,7 @@ output: github_document
 ---
 
 ```{r setup, include=FALSE}
-knitr::opts_chunk$set(echo = TRUE)
+knitr::opts_chunk$set(echo = TRUE, warning = FALSE)
 
 library(p8105.datasets)
 library(tidyverse)
@@ -89,6 +89,8 @@ brfss_cleaned %>%
 
 
 
+
+
 ## Problem 2
 
 ```{r}
@@ -146,9 +148,47 @@ instacart %>%
   knitr::kable(caption = 'Average time of purchase of Pink Lady apples and coffee ice cream')
 ```
 
+
+
+
+
+
 ## Problem 3
 
 ```{r}
 data("ny_noaa")
+
+ny_noaa_cleaned = 
+  ny_noaa %>%
+  mutate(year = as.numeric(format(date, '%Y')), # split date into three columns (year, month, day)
+         month = month.abb[as.numeric(format(date, '%m'))],
+         day = as.numeric(format(date, '%d')),
+         #ny_noaa[, 3:5] <- apply(ny_noaa[, 3:5], MARGIN = 2, function(i){ i/10 }))
+         prcp = prcp/10/10, # convert measurements to cm 
+         snow = snow/10,
+         snwd = snwd/10,
+         tmax = as.numeric(tmax)/10, # convert temperature to degrees Celsius
+         tmin = as.numeric(tmin)/10)
+
+ny_noaa_cleaned %>%
+  filter(month %in% c('Jan', 'Jul')) %>%
+  group_by(id, month, year) %>%
+  summarise(avg_tmax = mean(tmax, na.rm = T)) %>%
+  ggplot(aes(x = year, y = avg_tmax, color = id)) +
+  geom_line() +
+  facet_grid(.~month) +
+  labs( # set labels
+    title = 'Average maximum temperature',
+    x = 'Year',
+    y = 'Temperature (Celsius)'
+  ) +
+  viridis::scale_color_viridis(
+    name = 'Weather station',
+    discrete = T
+  ) +
+  theme(axis.text.x = element_text(angle = 60, hjust = 1),
+        legend.position = 'none') # no legend (not necessary with facet_grid)
+
+  
 ```
 
