--- a/p8105_hw3_amv2187.md
+++ b/p8105_hw3_amv2187.md
@@ -238,3 +238,37 @@ ny_noaa_cleaned %>%
 ```
 
 ![](p8105_hw3_amv2187_files/figure-markdown_github/unnamed-chunk-7-1.png)
+
+``` r
+max_v_min = 
+  ggplot(ny_noaa_cleaned, aes(x = tmin, y = tmax)) +
+    geom_hex() +
+    scale_y_continuous(limits = c(-60, 60)) + # set y-axis range to match x-axis range
+    labs( # set labels
+      title = 'Daily temperature 1980-2010',
+      x = 'Minimum temperature (Celsius)',
+      y = 'Maximum temperature (Celsius)'
+    ) + 
+    theme(legend.position = c(1, 0),
+          legend.justification = c(1.1, -0.1),
+          legend.background = element_rect(color = "black", size = 0.2, linetype = "solid"),
+          legend.key.size = unit(0.02, "npc")) +
+    scale_fill_continuous(guide = guide_colorbar(title = 'Days'))
+
+temp_by_year = 
+  ny_noaa_cleaned %>%
+  filter(snow > 0 & snow < 100) %>%
+  group_by(year) %>%
+  ggplot(aes(x = year, y = snow, group = year)) +
+  geom_boxplot(fill = 'grey') + 
+  coord_flip() + 
+  labs(
+    title = 'Snowfall amount by year',
+    y = 'Snowfall (cm)',
+    x = 'Year'
+  )
+
+max_v_min + temp_by_year
+```
+
+![](p8105_hw3_amv2187_files/figure-markdown_github/unnamed-chunk-7-2.png)
